# popup-translation

./: .eslintrc-auto-import.json  .gitignore  .prettierrc.cjs  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  auto-imports.d.ts  index.html  justfile  package.json  pnpm-lock.yaml  shims.d.ts  tailwind.config.js  thumb.html  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: main.yml  pub.yml  release.yml
src/: App.tsx  App.vue  args.rs  clipboard.rs  globals.css  index.ts  index.tsx  main.rs  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clip.rs  command.rs  main.rs  setting.rs  setup.rs  sys_tray.rs  utils.rs
src/api/: chatgpt.ts  comman.ts  deepl.ts  google.ts  youdao.ts
src/command/: core.ts
src/components/: Card.vue  Greet.vue  Loading.vue  Nav.vue  Set.vue  Translation.vue  bing.vue  card.vue  frame.vue  loding.vue  translation.vue
src/components/Nav/: LangSwitch.tsx  index.tsx
src/components/Setting/: index.tsx
src/components/Translation/: Agg.tsx  Split.tsx  index.tsx
src/components/aggregateMode/: Nav.vue  Translation.vue
src/components/common/: Button.vue  Input.vue  Textbox.vue
src/components/mode/aggregate/: Nav.vue  Translation.vue
src/components/mode/split/: Nav.vue
src/components/nav/: Model1Nav.vue
src/components/ui/: button.tsx  card.tsx  switch.tsx
src/html/: google.html
src/index/: App.vue  index.ts
src/js/: bing.js  dictcn.js  youdao.js  youglish.js
src/lib/: utils.ts
src/main/: App.vue  styles.css
src/main/components/: Nav.vue  Set.vue  Translation.vue
src/main/components/common/: Card.vue  LangSwitch.vue  Textbox.vue
src/main/components/mode/aggregate/: Nav.vue  Translation.vue
src/main/components/mode/split/: Nav.vue  Translation.vue
src/platform/: bing.rs  chatgpt.ts  core.ts  deepl.ts  dictcn.rs  google.ts  mod.rs  youdao.rs  youdao.ts  youglish.rs
src/thumb/: App.tsx  index.tsx
src/translation/: ai_gpt.rs  bing.rs  default_api.rs  dictcn.rs  google_api.rs  mod.rs  todo_ai.md  todo_deepl.md  todo_google.md  youdao.rs  youglish.rs
src/types/: auto-import.d.ts  index.ts  type.ts
src/use/: config.ts  setting.ts
src/utils/: file.ts  index.ts
