[package]
name = "popup-translation"
version = "0.2.1"
edition = "2021"
description = "🧼 A popup translation tool."
authors = ["fzdwx <likelovec@gmail.com>"]
repository = "https://github.com/fzdwx/popup-translation"
keywords = ["popup", "translation", "tool", "rust", "wry", "clap", "fanyi"]
categories = ["command-line-utilities", "translation"]
readme = "https://github.com/fzdwx/popup-translation/blob/main/README.md"
license = "MIT"
license-file = "https://github.com/fzdwx/popup-translation/blob/main/LICENSE.txt"

[[bin]]
name = "fanyi"
path = "./src/main.rs"

[[bin]]
name = "popup-translation"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = { version = "4.1.4", features = ["derive"] }
wry = "0.26.0"
x11-clipboard = "0.7.0"
