[package]
name = "popup-translation"
version = "0.3.1"
edition = "2021"
description = "🧼 A popup translation tool."
authors = ["fzdwx <likelovec@gmail.com>"]
repository = "https://github.com/fzdwx/popup-translation"
keywords = ["popup", "tauri", "wry", "fanyi", "translation"]
categories = ["command-line-utilities", "translation"]
readme = "README.md"
license-file = "LICENSE.txt"
default-run = "fanyi"

[[bin]]
name = "fanyi"
path = "./src/main.rs"

[[bin]]
name = "popup-translation"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = "1.0.152"
serde_json = "1.0.93"
wry = "0.27.0"

[target."cfg(target_os = \"linux\")".dependencies]
x11-clipboard = "0.7.0"

[target.'cfg(not(linux))'.dependencies]
#enigo = "0.0.14"
enigo = { git = "https://github.com/enigo-rs/enigo" }
