[package]
name = "popup-translation"
version = "0.0.1"
description = "一个划词翻译软件"
authors = ["fzdwx"]
license = "MIT"
repository = "https://github.com/fzdwx/popup-translation"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [
  "dialog-all",
  "global-shortcut",
  "global-shortcut-all",
  "http-all",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5.0"
log = "0.4.17"
tauri-plugin-log = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev", features = [
  "colored",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


[target."cfg(target_os = \"linux\")".dependencies]
x11-clipboard = "0.7.0"

[target.'cfg(not(linux))'.dependencies]
#enigo = "0.0.14"
enigo = { git = "https://github.com/enigo-rs/enigo" }
